kubernetes/docker-registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: docker-registry
  namespace: docker-registry
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      # - image: redis:latest
      #   imagePullPolicy: Always
      #   name: redis
      #   volumeMounts:
      #   - mountPath: /redis/data
      #     name: redis-data

      - image: registry:latest
        imagePullPolicy: Always
        name: docker-registry
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        volumeMounts:
        - name: auth
          mountPath: /auth/htpasswd
          subPath: htpasswd
          
      volumes:
      - name: auth
        configMap:
          name: auth
          items:
              - key: htpasswd
                path: htpasswd
      # - emptyDir: {}
      #   name: redis-data
