kubernetes/docker-registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-west-1:XXXX:certificate/XXXX'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'  
  name: docker-registry
  namespace: docker-registry
spec:
  rules:
  - host: registry.example.com
    http:
      paths:
      - backend:
          service:
            name: docker-registry
            port:
              number: 5000
        path: /
        pathType: Prefix
